--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -24,6 +24,7 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": [
       1,
       {
